kubernetes/gr-foundry/manifests/atlantis/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
  namespace: atlantis
spec:
  serviceName: atlantis
  replicas: 1
  selector:
    matchLabels:
      app: atlantis
  template:
    metadata:
      labels:
        app: atlantis
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: atlantis
          image: ghcr.io/runatlantis/atlantis:latest
          ports:
            - name: atlantis
              containerPort: 4141
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4141
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4141
            periodSeconds: 60
          volumeMounts:
            - name: atlantis-data
              mountPath: /atlantis
  volumeClaimTemplates:
    - metadata:
        name: atlantis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
