kubernetes/gr-foundry/manifests/atlantis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: atlantis
spec:
  selector:
    app: atlantis
  ports:
    - name: atlantis
      port: 4141
      targetPort: 4141
